tests/AdEspresso/FacebookBundle/DependencyInjection/Fixtures/invalid/only-app_secret-ads.php
<?php

return [
    'facebook' => [
        'sdk' => [
            'enabled' => false,
        ],
        'ads' => [
            'config' => [
                'app_secret' => 'secret',
            ],
        ],
    ],
];
